# decisionengine_modules

./: .Jenkinsfile  .Jenkinsfile_new  .coveragerc  .flake8  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  about.py  genindex.html  graphite_client.py  index.html  jenkins.html  load_config.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  unittest.html
.Jenkins/workflows/: Jenkinsfile  Jenkinsfile_EL7  Jenkinsfile_EL8  Jenkinsfile_EL9
.codespell/: ignore_lines.txt  ignore_words.txt
.github/workflows/: ci.yaml  codeql.yml  gh-pages.yaml  linters.yaml  pep8.yaml  pylint.yaml  rpm-build.yaml  unit-test.yaml
.reuse/: dep5
AWS/: AWSSpotPrice.py  CloudBudget.py  CloudRequests.py  HPCAllocation.py  HTCondorJobQ.py  LocalCapacity.py  ProvisionerResourceList.py  TweakableParameters.py  pandas_scratch_pad.py
AWS/publishers/: AWS_burn_rate.py  AWS_figure_of_merit.py  AWS_generic_publisher.py  AWS_price_performance.py
AWS/sources/: AWSBurnRateSourceProxy.py  AWSInstancePerformance.py  AWSJobLimits.py  AWSOccupancy.py  AWSOccupancyWithSourceProxy.py  AWSSpotPrice.py  AWSSpotPriceWithSourceProxy.py  AccountConstants_sample.py  (+5 more)
_modules/: _weakrefset.html  index.html
_sources/: index.rst.txt  jenkins.rst.txt  unittest.rst.txt
code/: decisionengine_modules.AWS.html  decisionengine_modules.AWS.publishers.html  decisionengine_modules.AWS.sources.html  decisionengine_modules.AWS.transforms.html  decisionengine_modules.GCE.html  decisionengine_modules.GCE.publishers.html  decisionengine_modules.GCE.sources.html  decisionengine_modules.GCE.transforms.html  decisionengine_modules.NERSC.html  decisionengine_modules.NERSC.publishers.html  decisionengine_modules.NERSC.sources.html  decisionengine_modules.NERSC.transforms.html  decisionengine_modules.NERSC.util.html  decisionengine_modules.graphite.html  decisionengine_modules.graphite.publishers.html  decisionengine_modules.htcondor.html  decisionengine_modules.htcondor.publishers.html  decisionengine_modules.htcondor.sources.html  decisionengine_modules.html  decisionengine_modules.util.html  index.html  setup.html
dashboards/: Metrics-for-counting-slots-and-cores.json  Redis-uptime-commands-memory.json  Runtimes-of-Transform-Logic-Engine-Publisher-Source.json
doc/: DE_Sprint_Kickoff.pptx  Makefile  README.md  readme
glideinwms/: classads.py  configure_gwms_frontend.py  glide_frontend_element.py  glideinwms_config_lib.py  resource_dist_plugins.py  security.py
htcondor/: htcondor_query.py
modules/: graphite_client.py  load_config.py  readme
release_notes/: release_notes_1.1.html  release_notes_1.2.html  release_notes_1.3.html  release_notes_1.4.html  release_notes_1.5.html  release_notes_1.6.html  release_notes_1.7.html  release_notes_2.0.html
testcases/: Scratch
tests/: GceOccupancy.input.fixture.json  GceOccupancy.output.fixture.csv  factory_client.cs.fixture  factory_entries.cs.fixture  factory_global.cs.fixture  gce_limits_factory_entries.test  instance_performance.csv  instance_performance_google.csv  instance_performance_nersc.csv  newt_allocations.cs.fixture  newt_status.cs.fixture  passwd  test_AwsBurnRate.py  test_GCEBillingInfo.py  test_GCEFigureOfMerit_publisher.py  test_GCEInstancePerformanceInfo.py  test_GCEPricePerformanceInfo.py  test_GCEPricePerformance_publisher.py  test_GCEResourceLimits.py  test_GceBurnRate.py  test_GceFigureOfMerit.py  test_GceOccupancy.py  test_NerscAllocationInfo.py  test_NerscFigureOfMerit.py  test_NerscFigureOfMerit_publisher.py  test_NerscInstancePerformance.py  test_NerscJobInfo.py  test_factory_client.py  test_factory_entries.py  test_factory_global.py  test_fomorderplugin.py  test_grid_figure_of_merit.py  test_htcondor_query.py  test_job_clustering.py  test_job_clustering_publisher.py  test_job_q.py  test_nersc_allocations.py  test_nersc_jobs.py  test_slots.py  utils.py
util/: figure_of_merit.py  retry_function.py  test_retry_function.py  testutils.py  tsort.py
(+465 files in other folders)
