[build-system]
requires = ["setuptools>=51.2", "wheel", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/decisionengine_modules/version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-l -v --durations=0 -n 4"
log_level = "debug"
testpaths = "src/decisionengine_modules"
timeout = 120
filterwarnings = [
  "ignore::DeprecationWarning:M2Crypto"
] # Only deprecations in third-party software for now.
flake8-max-line-length = "120"
flake8-ignore = "E501 E303 E302 E261 E265 E203 W503 W504"
flake8-show-source = "True"
flake8-statistics = "True"

[tool.black]
line-length = 120
target-version = ['py36']

[tool.isort]
src_paths = ["doc", "src"]
py_version = 36
profile = "black"
line_length = 120
combine_star = "True"
float_to_top = "True"
order_by_type = "True"
dedup_headings = "True"
known_first_party = ["decisionengine", "decisionengine_modules"]
lines_between_types = 1
force_alphabetical_sort_within_sections = "True"
